Closed
Bug 31709
Opened 25 years ago
Closed 25 years ago
CTRL+drag msg crashes (used IMAP->IMAP, same server)
Categories
(MailNews Core :: Backend, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M16
People
(Reporter: laurel, Assigned: blizzard)
Details
(Keywords: crash, platform-parity)
Using 2000-03-13-03-M15-nb1b commercial build linux rh6.0
Ctrl+Drag a message causes a crash. Used IMAP->IMAP same server.
1. Launch and go to mail window, select IMAP inbox and select a message.
2. Ctrl+drag the message to another folder on the same server.
Result: crash occurs.
Waiting to access Talkback to get report details.
Comment 2•25 years ago
|
||
Pardon my ignorance, how is ctrl-drag different from unmodified drag? Is there
a reason this wouldn't be an M15 stopper?
Provisionally marking M15.
Target Milestone: --- → M15
Ctrl+drag is never implemented in the code. I don't think this should be a M15
stopper. I can't get the crash to happen so far. I'll keep trying and see if I
can figure out where's the crash.
Correct my comment, I tried on NT not Linux. I'm not sure if the D&D work on
Linux yet. Bug 27295 (DND doesn't work in mail/news on linux) is still open.
Move this bug to M16.
| Assignee | ||
Comment 8•25 years ago
|
||
Yeah, that looks like my bug. Regular D&D works in mail/news on linux. I use
it every day. Didn't know about the ctrl key feature.
Assignee: chuang → blizzard
Keywords: beta2
| Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 9•25 years ago
|
||
I checked in a fix for the crash. It was something simple, just an
uninitialized variable.
However, the transferrable array is empty that is passed in to the drag. I'm
not sure why.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 10•25 years ago
|
||
OK using 2000-04-24-09m16 commercial build linux rh 6.0
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•