Fix for bug #31709.  Make sure to initialize the return value so that targetListFromTransArr() won't return garbage if the array is empty.  This fixes a crash when doing a ctrl-drag in mailnews with imap.